--- a/views/map.ejs
+++ b/views/map.ejs
@@ -498,11 +498,13 @@
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyByImK2-XHVM_ci2bkhCQA8IizPP8eieCY&libraries=places&callback=initMap"
         async defer></script>
 
-
-
-
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.2.6/jquery.min.js"></script>
+    <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+    <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js'></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
+
+
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.2.6/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script> -->
     
 
     <script src="js/multi-step-form.js"></script>
