--- a/views/customer_service/partial/navbar.ejs
+++ b/views/customer_service/partial/navbar.ejs
@@ -11,7 +11,7 @@
                 <b> BBIKE Customer Service</b>
             </a>
             <ul class="navbar-nav">
-                <li class="nav-item mx-2"> <a class="nav-link" href="/CScustomer/1">Customers</a> </li>
+                <li class="nav-item mx-2"> <a class="nav-link" href="/CScustomer/all/1">Customers</a> </li>
                 <li class="nav-item mx-2"> <a class="nav-link" href="/CSemployee/all/1">Employees </a> </li>
             </ul>
             <ul class="navbar-nav ml-auto">
