--- a/views/index.ejs
+++ b/views/index.ejs
@@ -45,16 +45,17 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-lg-6 col-6 p-4"> <img class="img-fluid d-block mb-3 mx-auto rounded" src="image/icon/shield.png"
-            width="100">
-          <h4>ประกันระหว่างขนส่งสูงสุดถึง 2000 บาท</h4>
-          <p class="mb-0"><i>"ปลอดภัย ไว้ใจได้"</i></p>
-        </div>
         <div class="col-lg-6 col-6 p-4"> <img class="img-fluid d-block mb-3 mx-auto rounded" src="image/icon/shopping.png"
             width="100">
           <h4> <b>ฝากซื้อ ฝากส่ง</b></h4>
           <p class="mb-0"><i>"ถึงไว ทันใจ"</i></p>
         </div>
+        <div class="col-lg-6 col-6 p-4"> <img class="img-fluid d-block mb-3 mx-auto rounded" src="image/icon/shield.png"
+            width="100">
+          <h4>ประกันระหว่างขนส่งสูงสุดถึง 2000 บาท</h4>
+          <p class="mb-0"><i>"ปลอดภัย ไว้ใจได้"</i></p>
+        </div>
+
       </div>
     </div>
   </div>
@@ -68,18 +69,18 @@
       </div>
     </div>
   </div>
-  <div class="py-3 text-center">
+  <div class="py-3 text-center d-flex align-items-center" style="min-height: 60%;">
     <div class="container">
       <div class="row">
-        <div class="col-md-4 col-6 p-3"> <img class="img-fluid d-block mx-auto" src="image/icon/map.png">
+        <div class="col-md-4 col-6 p-3 px-2"> <img class="img-fluid d-block mx-auto" src="image/icon/map.png">
           <h2 class="my-3">1. ระบุเส้นทางที่คุณต้องการ</h2>
           <p>ระบุเส้นทางที่คุณต้องการ ให้เราบริการ</p>
         </div>
-        <div class="col-md-4 col-6 p-3"> <img class="img-fluid d-block mx-auto" src="image/icon/choices.png">
+        <div class="col-md-4 col-6 p-3 px-2"> <img class="img-fluid d-block mx-auto" src="image/icon/choices.png">
           <h2 class="my-3"> <b>2. เลือกบริการ</b></h2>
           <p>เลือกบริการตามที่คุณต้องการ</p>
         </div>
-        <div class="col-md-4 p-3"> <img class="img-fluid d-block mx-auto" src="image/icon/order.png">
+        <div class="col-md-4 p-3 px-2"> <img class="img-fluid d-block mx-auto" src="image/icon/order.png">
           <h2 class="my-3"> <b>3. สรุปผลการสั่งงาน</b></h2>
           <p>ระบุรายละเอียดงาน ยืนยันการสั่งงานและเราจะติดต่อมาในไม่กี่นาที</p>
         </div>
@@ -95,7 +96,7 @@
         <div class="mx-auto col-md-6">
           <h1>Track & Tracep</h1>
           <p class="">ติดตามการส่งของท่าน</p>
-          
+
           <form class="form-inline d-flex justify-content-center" method="POST">
             <div class="input-group"> <input type="text" class="form-control" placeholder="รหัสในการบริการ" name="idTracking">
               <div class="input-group-append"> <button class="btn btn-primary" type="submit">ติดตาม</button> </div>
@@ -103,13 +104,14 @@
             <p class="text-danger">
               <%= error %>
             </p>
-            <p class="mt-4 text-warning">หากมีปัญหาหรือจำรหัสในการบริการไม่ได้ <a href="#contact" class="text-danger">กรุณาแจ้งเจ้าหน้าที่ตามที่อยู่ด้านล่าง</a> </p>
+            <p class="mt-4 text-warning">หากมีปัญหาหรือจำรหัสในการบริการไม่ได้ <a href="#contact" class="text-danger">กรุณาแจ้งเจ้าหน้าที่ตามที่อยู่ด้านล่าง</a>
+            </p>
           </form>
         </div>
       </div>
     </div>
   </div>
-  <div class="py-5 text-center filter-light" style="">
+  <div class="py-5 text-center filter-light" >
     <div class="container">
       <div class="row">
         <div class="col-md-12">
@@ -117,8 +119,8 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-6 p-0" style="">
-          <div class="card py-2" style="">
+        <div class="col-md-6 p-0">
+          <div class="card py-2">
             <div class="card-body p-4">
               <h1 class="text-body"><b>Start</b></h1>
               <h3 class="text-body">เริ่มต้นที่ <b>46</b> บาท</h3>
@@ -127,11 +129,11 @@
         </div>
         <div class="col-md-6 p-0 py-2">
           <div class="card border-0 rounded-0" style="	background-image: linear-gradient(to bottom, #f0f0f0, #ffffff);	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
-            <div class="card-body p-4" style="">
+            <div class="card-body p-4">
               <h3 class="text-body">1 - 30 Km</h3>
               <h2 class="my-3 text-body"><b>7.2 Baht&nbsp;</b><sub>/Km</sub></h2>
               <h3 class="text-body">&gt; 30 Km</h3>
-              <h2 class="my-3 text-body" style=""><b>14 Baht </b>/Km</h2>
+              <h2 class="my-3 text-body"><b>14 Baht </b>/Km</h2>
             </div>
           </div>
         </div>
@@ -149,11 +151,14 @@
           <p>เบอร์โทรศัพท์ : 054-8475632</p>
           <p>Facebook : BBike</p>
           <p>Line : @BBike</p>
-          <p class="mb-0" style=""> <a href="mailto:info@bbink.com">info@bbink.com</a> </p>
+          <p class="mb-0"> <a href="mailto:info@bbink.com">info@bbink.com</a> </p>
           <hr>
         </div>
-        <div class="col-md-4" style="">
+        <div class="col-md-4">
           <h5 class="mb-3 pt-3 text-right">เข้าสู่ระบบสำหรับพนักงาน</h5>
+          <p>Password สำหรับฝ่าย Customer Service <b>[Employee ID: CS001, Password: 000000]</b></p>
+          <p>Password สำหรับฝ่าย Driver <b>[Employee ID: DV001, Password: 111111]</b></p>
+
           <form id="loginEmployee" method="POST">
             <div class="form-group"> <input type="text" class="form-control" placeholder="Employee ID" name="IDEmployee">
             </div>
@@ -187,7 +192,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
     crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-    crossorigin="anonymous" style=""></script>
+    crossorigin="anonymous"></script>
   <script src="js/smooth-scroll.js"></script>
 </body>
 
