--- a/views/customer_service/partial/navbar.ejs
+++ b/views/customer_service/partial/navbar.ejs
@@ -1,22 +1,21 @@
-<nav class="navbar navbar-expand-md navbar-dark bg-dark">
-    <div class="container justify-content-center"> <button class="navbar-toggler navbar-toggler-right border-0" type="button"
-            data-toggle="collapse" data-target="#navbar9">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container"> <a class="navbar-brand text-primary" href="#">
+            <i class="fa d-inline fa-lg fa-circle-o"></i>
+            <b> BBIKE Customer Service</b>
+        </a> <button class="navbar-toggler navbar-toggler-right border-0" type="button" data-toggle="collapse"
+            data-target="#navbar11">
             <span class="navbar-toggler-icon"></span>
         </button>
-       
-
-        <div class="collapse navbar-collapse">
-            <a class="navbar-brand text-primary d-none d-md-block">
-                <i class="fa d-inline fa-lg fa-circle"></i>
-                <b> BBIKE Customer Service</b>
-            </a>
-            <ul class="navbar-nav">
+        <div class="collapse navbar-collapse" id="navbar11">
+            <ul class="navbar-nav mr-auto">
                 <li class="nav-item mx-2"> <a class="nav-link" href="/CScustomer/all/1">Customers</a> </li>
                 <li class="nav-item mx-2"> <a class="nav-link" href="/CSemployee/all/1">Employees </a> </li>
             </ul>
             <ul class="navbar-nav ml-auto">
+
                 <li class="nav-item"> <a class="nav-link text-primary" href="/">ออกจากระบบ</a> </li>
             </ul>
         </div>
     </div>
 </nav>
+
