--- a/views/driver/partial/navbar.ejs
+++ b/views/driver/partial/navbar.ejs
@@ -1,19 +1,18 @@
-<nav class="navbar navbar-expand-md navbar-dark bg-dark">
-    <div class="container justify-content-center"> <button class="navbar-toggler navbar-toggler-right border-0" type="button"
-            data-toggle="collapse" data-target="#navbar9">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container"> <a class="navbar-brand text-primary" href="#">
+            <i class="fa d-inline fa-lg fa-circle-o"></i>
+            <b> BBIKE Driver</b>
+        </a> <button class="navbar-toggler navbar-toggler-right border-0" type="button" data-toggle="collapse"
+            data-target="#navbar11">
             <span class="navbar-toggler-icon"></span>
         </button>
-        
+        <div class="collapse navbar-collapse" id="navbar11">
 
-        <div class="collapse navbar-collapse">
-                <a class="navbar-brand text-primary d-none d-md-block">
-                    <i class="fa d-inline fa-lg fa-circle"></i>
-                    <b> BBIKE Driver</b>
-                </a>
-                
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item"> <a class="nav-link text-primary" href="/">ออกจากระบบ</a> </li>
-                </ul>
-            </div>
+            <ul class="navbar-nav ml-auto">
+
+                <li class="nav-item"> <a class="nav-link text-primary" href="/">ออกจากระบบ</a> </li>
+            </ul>
+        </div>
     </div>
 </nav>
+
